2001-09-16  Adam Fedor  <fedor@gnu.org>

	* Fixes to handle matrixes better. Editable matrix cells. Improved
	editors for window size and buttons.
	* GormObjectEditor.m ([GormViewSizeInspector -init]): Add size
	form for resizing. New methods for resizing and obtaining
	window sizes.
	* GormMatrixEditor.m: New class for editing matrix cells.
	* GormWindowEditor.m (_editTextView:withEvent:) Moved to 
	GormMatrixEditor.m.
	(-_validateFrame:forViewPtr:withEvent:update:update): When replacing
	view with matrix detach old view and attach matrix to document.
	(-mouseDown:): Open matrix subeditor on double-click of matrix.
	(-deleteSelection): Detach subviews of a box before deleting box.

	* Palettes/2Controls/inspectors.m: New button inspector.

2001-08-21  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	Added the ability to change the font of the selected objects
	* Gorm.m:
	new category : NSCell (GormAdditions) (it gives us full control of 
	the font's changes)
	added a menu item for the font panel
	added a shortcut for the palettes panel (@"p")
	* GormWindowEditor.m : [-acceptsFirstResponder] new method, returns YES
	[-initWithObject] set self as initialFirstResponder of the window
	[-changeFont:] new method, change the font of the selected controls
	[-selectObjects:] update the font in the font panel
	* Palettes/2Controls/GormSliderInspector.gorm: font updates

2001-08-20  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Palettes/2Controls/main.m: Add stepper control to the controls' 
	palette
	
	* Add stepper inspector.
	* Palettes/2Controls/inspectors.m: added GormSliderAttributsInspector
	class
	* Palettes/2Controls/GormSliderInspector.gorm: New file.
	* Palettes/2Controls/GNUmakefile: Update

2001-08-18  Adam Fedor  <fedor@gnu.org>

	* GormWindowEditor.m (-_editTextView:withEvent:): Size the NSForm
	to fit when titles are edited.

	* Add slider inspector.
	* Palettes/2Controls/inspectors.m: New file.
	* Palettes/2Controls/GormSliderInspector.gorm: Likewise.