@@ -1,6 +1,7 @@
 {
     GormButtonInspector = {
 	Actions = (
+	    "setButtonTypeFrom:"
 	);
 	Outlets = (
 	    alignMatrix,
