@@ -1,3 +1,11 @@
+2001-09-17  Adam Fedor  <fedor@gnu.org>
+
+	* GormWindowEditor.m
+	(-_validateFrame:forViewPtr:withEvent:update:update): Allow resize
+	if frame is already too small.
+	* Palettes/2Controls/inspectors.m: Implement button type popup
+	for button inspector.
+
 2001-09-16  Adam Fedor  <fedor@gnu.org>
 
 	* Fixes to handle matrixes better. Editable matrix cells. Improved
